Correção de erros no pattern matching de URLs e alternativas.

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://niduu.com/web/lesson/*"],
+      "matches": ["*://*/*"],
       "js": ["content.js"]
     }
   ]
